Removed Logical Errors

--- a/Index.html
+++ b/Index.html
@@ -1484,7 +1484,7 @@
     var fifthCropTitle = document.getElementById('fifth_crop_title');
     var fifthCropDesc = document.getElementById('fifth_crop_desc');
     var fifthCropTitleModal = document.getElementById('fifth_crop_title_modal');
-    var fifthCropModalTips = document.getElementById('fifth_crop_modal_tips');
+    var fifthCropModalTips = document.getElementById('fifth_crop_title_modal_tips');
     var fifthCropInfo = document.getElementById('fifth_crop_info');
     var fifthCropImgDesc = document.getElementById('cropImgDesc5');
     var fifthCropImgInfo = document.getElementById('cropImgInfo5');
@@ -1652,7 +1652,7 @@
     // Fetching First Data in Crops
     firestore.collection('crops').where('id', '==', '1st').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             firstCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             firstCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             firstCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1665,7 +1665,7 @@
 
     firestore.collection('crops').where('id', '==', '2nd').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             secondCropTitleModal.innerHTML = querySnapshot.docs[0].data().name;
             secondCropModalTips.innerHTML = querySnapshot.docs[0].data().tips;
             secondCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
@@ -1678,7 +1678,7 @@
 
     firestore.collection('crops').where('id', '==', '3rd').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             thirdCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             thirdCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             thirdCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1691,7 +1691,7 @@
 
     firestore.collection('crops').where('id', '==', '4th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             fourthCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             fourthCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             fourthCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1704,7 +1704,7 @@
 
     firestore.collection('crops').where('id', '==', '5th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             fifthCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             fifthCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             fifthCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1717,7 +1717,7 @@
 
     firestore.collection('crops').where('id', '==', '6th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             sixthCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             sixthCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             sixthCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1730,7 +1730,7 @@
 
     firestore.collection('crops').where('id', '==', '7th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             seventhCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             seventhCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             seventhCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1743,7 +1743,7 @@
 
     firestore.collection('crops').where('id', '==', '8th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             eightCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             eightCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             eightCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1756,7 +1756,7 @@
 
     firestore.collection('crops').where('id', '==', '9th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             ninthCropTitle.innerHTML = querySnapshot.docs[0].data().name;
             ninthCropDesc.innerHTML = querySnapshot.docs[0].data().benefit;
             ninthCropInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1769,7 +1769,7 @@
 
     firestore.collection('crops').where('id', '==', '10th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             tenthCropImgDesc.src = querySnapshot.docs[0].data().descIMG;
             tenthCropImgInfo.src = querySnapshot.docs[0].data().infoIMG;
             tenthCropTitle.innerHTML = querySnapshot.docs[0].data().name;
@@ -1782,7 +1782,7 @@
 
     firestore.collection('seasons').where('id', '==', '1st').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S1stImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S1stDesc.innerHTML = querySnapshot.docs[0].data().description;
             S1stInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1791,7 +1791,7 @@
 
     firestore.collection('seasons').where('id', '==', '2nd').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S2stImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S2ndDesc.innerHTML = querySnapshot.docs[0].data().description;
             S2ndInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1800,7 +1800,7 @@
 
     firestore.collection('seasons').where('id', '==', '3rd').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S3rdImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S3rdDesc.innerHTML = querySnapshot.docs[0].data().description;
             S3rdInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1809,7 +1809,7 @@
 
     firestore.collection('seasons').where('id', '==', '4th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S4thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S4thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S4thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1818,7 +1818,7 @@
 
     firestore.collection('seasons').where('id', '==', '5th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S5thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S5thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S5thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1827,7 +1827,7 @@
 
     firestore.collection('seasons').where('id', '==', '6th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S6thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S6thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S6thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1836,7 +1836,7 @@
 
     firestore.collection('seasons').where('id', '==', '7th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S7thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S7thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S7thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1845,7 +1845,7 @@
 
     firestore.collection('seasons').where('id', '==', '8th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S8thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S8thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S8thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1854,7 +1854,7 @@
 
     firestore.collection('seasons').where('id', '==', '9th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S9thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S9thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S9thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1863,7 +1863,7 @@
 
     firestore.collection('seasons').where('id', '==', '10th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S10thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S10thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S10thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1872,7 +1872,7 @@
 
     firestore.collection('seasons').where('id', '==', '11th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S11thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S11thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S11thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1881,7 +1881,7 @@
 
     firestore.collection('seasons').where('id', '==', '12th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             S12thImgDesc.src = querySnapshot.docs[0].data().descIMG;
             S12thDesc.innerHTML = querySnapshot.docs[0].data().description;
             S12thInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1890,7 +1890,7 @@
 
     firestore.collection('municipalities').where('id', '==', '1st').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             atokImgDesc.src = querySnapshot.docs[0].data().descIMG;
             atokDesc.innerHTML = querySnapshot.docs[0].data().description;
             atokInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1899,7 +1899,7 @@
 
     firestore.collection('municipalities').where('id', '==', '2nd').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             bakunImgDesc.src = querySnapshot.docs[0].data().descIMG;
             bakunDesc.innerHTML = querySnapshot.docs[0].data().description;
             bakunInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1908,7 +1908,7 @@
 
     firestore.collection('municipalities').where('id', '==', '3rd').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             bokodImgDesc.src = querySnapshot.docs[0].data().descIMG;
             bokodDesc.innerHTML = querySnapshot.docs[0].data().description;
             bokodInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1917,7 +1917,7 @@
 
     firestore.collection('municipalities').where('id', '==', '4th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             buguiasImgDesc.src = querySnapshot.docs[0].data().descIMG;
             buguiasDesc.innerHTML = querySnapshot.docs[0].data().description;
             buguiasInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1926,7 +1926,7 @@
 
     firestore.collection('municipalities').where('id', '==', '5th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             itogonImgDesc.src = querySnapshot.docs[0].data().descIMG;
             itogonDesc.innerHTML = querySnapshot.docs[0].data().description;
             itogonInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1935,7 +1935,7 @@
 
     firestore.collection('municipalities').where('id', '==', '6th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             kabayanImgDesc.src = querySnapshot.docs[0].data().descIMG;
             kabayanDesc.innerHTML = querySnapshot.docs[0].data().description;
             kabayanInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1944,7 +1944,7 @@
 
     firestore.collection('municipalities').where('id', '==', '7th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             kapanganImgDesc.src = querySnapshot.docs[0].data().descIMG;
             kapanganDesc.innerHTML = querySnapshot.docs[0].data().description;
             kapanganInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1953,7 +1953,7 @@
 
     firestore.collection('municipalities').where('id', '==', '8th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             kibunganImgDesc.src = querySnapshot.docs[0].data().descIMG;
             kibunganDesc.innerHTML = querySnapshot.docs[0].data().description;
             kibunganInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1962,7 +1962,7 @@
 
     firestore.collection('municipalities').where('id', '==', '9th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             latImgDesc.src = querySnapshot.docs[0].data().descIMG;
             latDesc.innerHTML = querySnapshot.docs[0].data().description;
             latInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1971,7 +1971,7 @@
 
     firestore.collection('municipalities').where('id', '==', '10th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             mankayanImgDesc.src = querySnapshot.docs[0].data().descIMG;
             mankayanDesc.innerHTML = querySnapshot.docs[0].data().description;
             mankayanInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1980,7 +1980,7 @@
 
     firestore.collection('municipalities').where('id', '==', '11th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             sablanImgDesc.src = querySnapshot.docs[0].data().descIMG;
             sablanDesc.innerHTML = querySnapshot.docs[0].data().description;
             sablanInfo.innerHTML = querySnapshot.docs[0].data().information;
@@ -1989,7 +1989,7 @@
 
     firestore.collection('municipalities').where('id', '==', '12th').get()
     .then( (querySnapshot) => {
-        if(querySnapshot.docs[0].exists){
+        if(querySnapshot.docs.length >= 1){
             tubaImgDesc.src = querySnapshot.docs[0].data().descIMG;
             tubaDesc.innerHTML = querySnapshot.docs[0].data().description;
             tubaInfo.innerHTML = querySnapshot.docs[0].data().information;
